implemented error handeling and data validation
